Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -226,6 +226,7 @@
 116.88.97.49 xmlrpc;
 116.89.31.100 xmlrpc;
 117.132.188.206 xmlrpc;
+117.160.250.132 xmlrpc;
 117.160.250.133 xmlrpc;
 117.50.190.128 xmlrpc;
 117.82.217.127 xmlrpc;
@@ -1276,7 +1277,6 @@
 223.73.2.34 xmlrpc;
 23.101.10.141 xmlrpc;
 23.111.202.231 xmlrpc;
-2400:6180:0:d0::e73:9001 xmlrpc;
 2400:8901::f03c:91ff:fe08:16c xmlrpc;
 2400:8901::f03c:91ff:fefd:d635 xmlrpc;
 2400:8901::f03c:92ff:fe19:5a3 xmlrpc;
@@ -2281,6 +2281,7 @@
 95.26.30.114 xmlrpc;
 95.27.126.133 xmlrpc;
 95.27.207.221 xmlrpc;
+95.29.195.237 xmlrpc;
 95.32.182.101 xmlrpc;
 95.32.218.48 xmlrpc;
 95.32.84.49 xmlrpc;
