--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -905,6 +905,7 @@
 185.244.23.40 xmlrpc;
 185.244.23.48 xmlrpc;
 185.244.5.248 xmlrpc;
+185.246.194.111 xmlrpc;
 185.250.149.64 xmlrpc;
 185.253.102.77 xmlrpc;
 185.253.102.90 xmlrpc;
