--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -267,6 +267,7 @@
 120.233.155.17 xmlrpc;
 120.233.155.18 xmlrpc;
 120.233.155.9 xmlrpc;
+120.234.203.171 xmlrpc;
 120.24.108.217 xmlrpc;
 120.24.109.199 xmlrpc;
 120.24.225.212 xmlrpc;
@@ -854,6 +855,7 @@
 185.106.116.149 xmlrpc;
 185.108.19.53 xmlrpc;
 185.108.22.37 xmlrpc;
+185.114.245.100 xmlrpc;
 185.114.245.107 xmlrpc;
 185.114.245.109 xmlrpc;
 185.114.247.170 xmlrpc;
@@ -1326,6 +1328,7 @@
 2a03:6f00:1::5c35:60ad xmlrpc;
 2a03:6f00:1::5c35:60ae xmlrpc;
 2a03:6f00:1::5c35:60b3 xmlrpc;
+2a03:6f00:1::5c35:60dd xmlrpc;
 2a03:6f00:1::5c35:60df xmlrpc;
 2a03:6f00:1::5c35:7ba6 xmlrpc;
 2a03:6f00:6:1::3 xmlrpc;
@@ -2179,6 +2182,7 @@
 93.92.200.175 xmlrpc;
 93.92.200.186 xmlrpc;
 94.102.127.136 xmlrpc;
+94.103.231.191 xmlrpc;
 94.137.79.149 xmlrpc;
 94.140.244.164 xmlrpc;
 94.140.244.4 xmlrpc;
