Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -404,6 +404,7 @@
 134.209.110.41 xmlrpc;
 136.169.209.203 xmlrpc;
 138.199.24.17 xmlrpc;
+138.199.60.178 xmlrpc;
 138.75.123.23 xmlrpc;
 139.144.118.100 xmlrpc;
 139.155.172.226 xmlrpc;
@@ -1831,6 +1832,7 @@
 54.169.204.41 xmlrpc;
 54.223.148.148 xmlrpc;
 54.223.212.222 xmlrpc;
+58.145.227.2 xmlrpc;
 58.152.74.33 xmlrpc;
 58.182.186.178 xmlrpc;
 58.20.235.231 xmlrpc;
