--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1807,6 +1807,7 @@
 5.255.231.43 xmlrpc;
 5.255.231.46 xmlrpc;
 5.255.231.63 xmlrpc;
+5.255.231.76 xmlrpc;
 5.255.231.89 xmlrpc;
 5.255.231.95 xmlrpc;
 5.255.231.96 xmlrpc;
