--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1230,6 +1230,7 @@
 213.24.125.184 xmlrpc;
 213.24.125.21 xmlrpc;
 213.24.126.224 xmlrpc;
+213.24.127.137 xmlrpc;
 213.24.133.126 xmlrpc;
 213.24.134.77 xmlrpc;
 213.87.157.255 xmlrpc;
