Push from Scanner

--- a/nginx-config-files/git.conf
+++ b/nginx-config-files/git.conf
@@ -483,6 +483,7 @@
 2804:14c:154:a243:6267:c8b:5bfd:85cf git;
 2804:14c:154:a243:eda9:db39:fff4:d101 git;
 2a0e:1bc0:193:1030::1 git;
+2a0e:1bc0:193:1066::1 git;
 2a0e:1bc1:129:1045::1 git;
 2a0e:1bc1:129:10cf::1 git;
 3.101.138.250 git;
@@ -631,6 +632,7 @@
 45.79.177.99 git;
 45.79.187.106 git;
 45.83.220.210 git;
+45.92.39.237 git;
 45.92.39.240 git;
 45.92.39.241 git;
 45.94.211.129 git;
