Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -656,6 +656,7 @@
 176.115.51.46 xmlrpc;
 176.115.57.73 xmlrpc;
 176.117.112.159 xmlrpc;
+176.118.247.227 xmlrpc;
 176.119.22.17 xmlrpc;
 176.120.195.231 xmlrpc;
 176.120.6.51 xmlrpc;
