Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1663,12 +1663,14 @@
 47.240.99.43 xmlrpc;
 47.241.16.82 xmlrpc;
 47.242.65.194 xmlrpc;
+47.243.114.192 xmlrpc;
 47.243.233.108 xmlrpc;
 47.243.254.84 xmlrpc;
 47.243.28.156 xmlrpc;
 47.243.48.124 xmlrpc;
 47.245.114.228 xmlrpc;
 47.56.110.204 xmlrpc;
+47.74.152.29 xmlrpc;
 47.91.153.87 xmlrpc;
 47.92.135.132 xmlrpc;
 47.92.73.29 xmlrpc;
