--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1777,6 +1777,7 @@
 5.42.64.62 xmlrpc;
 5.42.66.6 xmlrpc;
 5.59.135.38 xmlrpc;
+5.59.222.41 xmlrpc;
 5.59.222.51 xmlrpc;
 5.8.21.34 xmlrpc;
 50.114.59.19 xmlrpc;
