Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2188,6 +2188,7 @@
 95.108.213.220 xmlrpc;
 95.108.213.223 xmlrpc;
 95.108.213.229 xmlrpc;
+95.108.213.247 xmlrpc;
 95.108.213.85 xmlrpc;
 95.108.213.88 xmlrpc;
 95.108.213.92 xmlrpc;
