Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1597,6 +1597,7 @@
 46.242.13.167 xmlrpc;
 46.242.9.108 xmlrpc;
 46.242.9.199 xmlrpc;
+46.243.232.93 xmlrpc;
 46.31.27.182 xmlrpc;
 46.32.86.16 xmlrpc;
 46.34.137.150 xmlrpc;
@@ -1840,6 +1841,8 @@
 78.106.143.17 xmlrpc;
 78.106.181.5 xmlrpc;
 78.132.159.93 xmlrpc;
+78.139.210.26 xmlrpc;
+78.156.235.199 xmlrpc;
 78.24.216.250 xmlrpc;
 78.29.102.159 xmlrpc;
 78.29.15.56 xmlrpc;
