--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1530,6 +1530,7 @@
 45.132.184.218 xmlrpc;
 45.136.246.76 xmlrpc;
 45.137.106.52 xmlrpc;
+45.15.112.144 xmlrpc;
 45.15.158.165 xmlrpc;
 45.15.158.39 xmlrpc;
 45.152.122.151 xmlrpc;
