--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1960,6 +1960,7 @@
 84.18.96.207 xmlrpc;
 84.18.96.46 xmlrpc;
 84.42.76.143 xmlrpc;
+84.51.209.212 xmlrpc;
 84.53.198.171 xmlrpc;
 85.140.114.25 xmlrpc;
 85.140.22.162 xmlrpc;
