--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -682,6 +682,8 @@
 176.67.55.31 xmlrpc;
 176.74.202.15 xmlrpc;
 176.96.255.239 xmlrpc;
+176.98.158.235 xmlrpc;
+176.99.235.7 xmlrpc;
 176.99.84.175 xmlrpc;
 178.128.112.200 xmlrpc;
 178.128.127.179 xmlrpc;
@@ -741,6 +743,7 @@
 178.44.108.201 xmlrpc;
 178.44.67.137 xmlrpc;
 178.45.169.127 xmlrpc;
+178.45.171.89 xmlrpc;
 178.45.74.153 xmlrpc;
 178.46.49.217 xmlrpc;
 178.57.124.4 xmlrpc;
@@ -1609,6 +1612,7 @@
 46.242.9.108 xmlrpc;
 46.242.9.199 xmlrpc;
 46.243.232.93 xmlrpc;
+46.29.208.18 xmlrpc;
 46.31.27.182 xmlrpc;
 46.32.86.16 xmlrpc;
 46.34.137.150 xmlrpc;
@@ -1789,6 +1793,7 @@
 5.42.213.178 xmlrpc;
 5.42.64.62 xmlrpc;
 5.42.66.6 xmlrpc;
+5.59.135.126 xmlrpc;
 5.59.135.38 xmlrpc;
 5.59.222.41 xmlrpc;
 5.59.222.51 xmlrpc;
