Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1177,6 +1177,7 @@
 212.164.39.105 xmlrpc;
 212.164.64.45 xmlrpc;
 212.232.44.250 xmlrpc;
+212.3.130.78 xmlrpc;
 212.3.130.84 xmlrpc;
 212.3.150.170 xmlrpc;
 212.35.168.172 xmlrpc;
@@ -1949,6 +1950,7 @@
 81.71.5.172 xmlrpc;
 81.9.126.137 xmlrpc;
 82.114.238.109 xmlrpc;
+82.142.132.76 xmlrpc;
 82.149.135.175 xmlrpc;
 82.156.116.176 xmlrpc;
 82.156.179.196 xmlrpc;
