--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -109,6 +109,7 @@
 109.161.51.28 xmlrpc;
 109.165.40.179 xmlrpc;
 109.168.137.241 xmlrpc;
+109.169.141.218 xmlrpc;
 109.169.214.11 xmlrpc;
 109.184.111.172 xmlrpc;
 109.187.87.192 xmlrpc;
@@ -1999,6 +2000,7 @@
 85.26.234.18 xmlrpc;
 85.26.234.3 xmlrpc;
 85.95.188.147 xmlrpc;
+85.95.189.123 xmlrpc;
 86.48.10.50 xmlrpc;
 87.117.48.186 xmlrpc;
 87.117.48.4 xmlrpc;
@@ -2069,6 +2071,7 @@
 91.214.82.70 xmlrpc;
 91.215.122.237 xmlrpc;
 91.221.189.226 xmlrpc;
+91.221.29.177 xmlrpc;
 91.223.118.42 xmlrpc;
 91.223.32.105 xmlrpc;
 91.224.140.142 xmlrpc;
@@ -2187,6 +2190,7 @@
 94.50.219.97 xmlrpc;
 94.51.117.162 xmlrpc;
 94.51.124.179 xmlrpc;
+94.51.236.9 xmlrpc;
 94.75.17.153 xmlrpc;
 95.104.244.148 xmlrpc;
 95.106.69.232 xmlrpc;
