Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -738,6 +738,7 @@
 178.234.55.247 xmlrpc;
 178.234.75.227 xmlrpc;
 178.237.248.21 xmlrpc;
+178.252.127.254 xmlrpc;
 178.34.151.172 xmlrpc;
 178.34.161.116 xmlrpc;
 178.34.161.217 xmlrpc;
@@ -1878,6 +1879,7 @@
 79.139.131.9 xmlrpc;
 79.139.151.25 xmlrpc;
 79.139.246.86 xmlrpc;
+79.141.208.34 xmlrpc;
 79.172.69.129 xmlrpc;
 79.172.70.109 xmlrpc;
 79.173.87.105 xmlrpc;
@@ -2029,6 +2031,7 @@
 87.250.224.26 xmlrpc;
 87.250.224.5 xmlrpc;
 87.250.224.6 xmlrpc;
+87.250.224.7 xmlrpc;
 87.250.224.76 xmlrpc;
 88.135.0.66 xmlrpc;
 88.135.80.97 xmlrpc;
