--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1437,6 +1437,7 @@
 37.230.136.226 xmlrpc;
 37.252.255.135 xmlrpc;
 37.29.24.222 xmlrpc;
+37.29.88.50 xmlrpc;
 37.78.251.70 xmlrpc;
 37.79.141.169 xmlrpc;
 37.79.142.251 xmlrpc;
@@ -2244,6 +2245,7 @@
 95.220.94.205 xmlrpc;
 95.221.225.151 xmlrpc;
 95.24.108.39 xmlrpc;
+95.24.116.194 xmlrpc;
 95.24.14.88 xmlrpc;
 95.24.146.230 xmlrpc;
 95.24.150.103 xmlrpc;
