Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1053,6 +1053,7 @@
 193.233.122.134 xmlrpc;
 193.233.123.20 xmlrpc;
 193.233.56.5 xmlrpc;
+193.233.58.57 xmlrpc;
 193.233.88.234 xmlrpc;
 193.233.91.58 xmlrpc;
 193.46.77.189 xmlrpc;
@@ -1122,6 +1123,7 @@
 196.242.195.43 xmlrpc;
 196.242.195.71 xmlrpc;
 198.44.173.88 xmlrpc;
+2.56.25.219 xmlrpc;
 2.56.91.17 xmlrpc;
 2.57.80.213 xmlrpc;
 2.59.50.4 xmlrpc;
