--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -925,6 +925,7 @@
 185.26.73.98 xmlrpc;
 185.33.161.37 xmlrpc;
 185.34.240.148 xmlrpc;
+185.34.240.201 xmlrpc;
 185.42.41.56 xmlrpc;
 185.46.14.157 xmlrpc;
 185.50.25.14 xmlrpc;
