Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2060,6 +2060,7 @@
 89.249.228.122 xmlrpc;
 89.249.228.146 xmlrpc;
 89.249.230.209 xmlrpc;
+89.250.166.66 xmlrpc;
 89.250.174.41 xmlrpc;
 89.250.223.10 xmlrpc;
 90.151.81.200 xmlrpc;
