Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1035,6 +1035,7 @@
 193.106.151.170 xmlrpc;
 193.112.79.79 xmlrpc;
 193.143.1.7 xmlrpc;
+193.151.222.216 xmlrpc;
 193.163.170.149 xmlrpc;
 193.164.18.33 xmlrpc;
 193.168.3.20 xmlrpc;
@@ -1252,6 +1253,7 @@
 217.21.74.17 xmlrpc;
 217.23.67.62 xmlrpc;
 217.26.21.199 xmlrpc;
+217.66.157.235 xmlrpc;
 218.189.40.114 xmlrpc;
 218.57.210.186 xmlrpc;
 219.136.129.58 xmlrpc;
