Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1037,6 +1037,7 @@
 193.112.79.79 xmlrpc;
 193.143.1.7 xmlrpc;
 193.151.222.216 xmlrpc;
+193.160.231.239 xmlrpc;
 193.163.170.149 xmlrpc;
 193.164.18.33 xmlrpc;
 193.168.3.20 xmlrpc;
