Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1633,6 +1633,7 @@
 46.242.9.199 xmlrpc;
 46.243.232.93 xmlrpc;
 46.29.208.18 xmlrpc;
+46.31.24.80 xmlrpc;
 46.31.27.182 xmlrpc;
 46.32.86.16 xmlrpc;
 46.34.137.150 xmlrpc;
@@ -2279,6 +2280,7 @@
 95.24.50.172 xmlrpc;
 95.24.57.95 xmlrpc;
 95.24.69.152 xmlrpc;
+95.24.70.57 xmlrpc;
 95.24.82.233 xmlrpc;
 95.25.49.251 xmlrpc;
 95.25.57.184 xmlrpc;
