--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2289,6 +2289,7 @@
 95.25.79.87 xmlrpc;
 95.26.112.81 xmlrpc;
 95.26.121.96 xmlrpc;
+95.26.130.200 xmlrpc;
 95.26.140.18 xmlrpc;
 95.26.140.69 xmlrpc;
 95.26.143.138 xmlrpc;
