--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -961,6 +961,7 @@
 185.61.222.253 xmlrpc;
 185.72.224.95 xmlrpc;
 185.78.113.254 xmlrpc;
+185.8.126.198 xmlrpc;
 185.8.127.56 xmlrpc;
 185.81.144.108 xmlrpc;
 185.82.177.82 xmlrpc;
