--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -917,6 +917,7 @@
 185.253.180.95 xmlrpc;
 185.253.182.213 xmlrpc;
 185.253.183.167 xmlrpc;
+185.253.183.221 xmlrpc;
 185.26.122.68 xmlrpc;
 185.26.122.73 xmlrpc;
 185.26.122.75 xmlrpc;
