--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -879,6 +879,7 @@
 185.15.38.175 xmlrpc;
 185.15.38.31 xmlrpc;
 185.152.95.108 xmlrpc;
+185.16.138.156 xmlrpc;
 185.165.163.127 xmlrpc;
 185.166.161.123 xmlrpc;
 185.169.100.13 xmlrpc;
