Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1826,6 +1826,7 @@
 50.114.59.19 xmlrpc;
 51.79.129.224 xmlrpc;
 51.79.130.34 xmlrpc;
+51.79.160.196 xmlrpc;
 51.79.229.197 xmlrpc;
 51.79.231.3 xmlrpc;
 51.79.231.79 xmlrpc;
