Push from Scanner

--- a/nginx-config-files/git.conf
+++ b/nginx-config-files/git.conf
@@ -476,6 +476,7 @@
 2804:14c:154:a243:eda9:db39:fff4:d101 git;
 2a0e:1bc0:193:1030::1 git;
 2a0e:1bc0:193:1066::1 git;
+2a0e:1bc0:193:109c::1 git;
 2a0e:1bc1:129:1045::1 git;
 2a0e:1bc1:129:10cf::1 git;
 3.101.138.250 git;
