--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -639,6 +639,7 @@
 175.24.165.88 xmlrpc;
 175.24.199.162 xmlrpc;
 175.24.212.162 xmlrpc;
+175.24.214.93 xmlrpc;
 175.27.212.157 xmlrpc;
 176.104.192.242 xmlrpc;
 176.106.151.121 xmlrpc;
