Push from Scanner

--- a/nginx-config-files/git.conf
+++ b/nginx-config-files/git.conf
@@ -477,6 +477,7 @@
 2a0e:1bc0:193:109c::1 git;
 2a0e:1bc1:129:1045::1 git;
 2a0e:1bc1:129:10cf::1 git;
+2a0e:1bc1:129:10e6::1 git;
 3.101.138.250 git;
 3.110.68.163 git;
 3.125.51.252 git;
