Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1003,6 +1003,7 @@
 188.18.241.80 xmlrpc;
 188.187.14.135 xmlrpc;
 188.19.147.14 xmlrpc;
+188.19.164.163 xmlrpc;
 188.19.42.71 xmlrpc;
 188.19.49.58 xmlrpc;
 188.190.152.72 xmlrpc;
@@ -2247,6 +2248,7 @@
 95.108.213.85 xmlrpc;
 95.108.213.88 xmlrpc;
 95.108.213.92 xmlrpc;
+95.110.74.58 xmlrpc;
 95.152.62.146 xmlrpc;
 95.152.63.18 xmlrpc;
 95.165.106.81 xmlrpc;
