--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2087,6 +2087,7 @@
 90.189.149.30 xmlrpc;
 91.105.156.38 xmlrpc;
 91.108.29.77 xmlrpc;
+91.186.108.78 xmlrpc;
 91.194.149.245 xmlrpc;
 91.195.204.103 xmlrpc;
 91.195.204.118 xmlrpc;
