--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1109,6 +1109,7 @@
 195.68.240.182 xmlrpc;
 195.68.241.7 xmlrpc;
 195.93.150.38 xmlrpc;
+195.93.151.221 xmlrpc;
 196.18.229.103 xmlrpc;
 196.18.229.202 xmlrpc;
 196.18.229.242 xmlrpc;
