--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1040,6 +1040,7 @@
 188.65.17.56 xmlrpc;
 188.92.195.2 xmlrpc;
 191.101.230.117 xmlrpc;
+192.144.6.207 xmlrpc;
 192.162.64.176 xmlrpc;
 192.162.64.206 xmlrpc;
 192.46.227.185 xmlrpc;
