Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1983,6 +1983,7 @@
 81.200.17.127 xmlrpc;
 81.200.17.50 xmlrpc;
 81.222.187.130 xmlrpc;
+81.27.147.151 xmlrpc;
 81.27.245.3 xmlrpc;
 81.4.209.28 xmlrpc;
 81.68.123.147 xmlrpc;
@@ -2046,6 +2047,7 @@
 86.48.10.50 xmlrpc;
 87.117.48.186 xmlrpc;
 87.117.48.4 xmlrpc;
+87.117.51.234 xmlrpc;
 87.117.55.140 xmlrpc;
 87.117.58.244 xmlrpc;
 87.225.17.35 xmlrpc;
