--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1209,6 +1209,7 @@
 212.115.49.166 xmlrpc;
 212.119.215.154 xmlrpc;
 212.124.19.97 xmlrpc;
+212.124.6.69 xmlrpc;
 212.124.7.152 xmlrpc;
 212.164.38.83 xmlrpc;
 212.164.39.105 xmlrpc;
