Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1925,6 +1925,7 @@
 79.139.151.25 xmlrpc;
 79.139.246.86 xmlrpc;
 79.141.208.34 xmlrpc;
+79.142.83.6 xmlrpc;
 79.172.69.129 xmlrpc;
 79.172.70.109 xmlrpc;
 79.173.87.105 xmlrpc;
@@ -2130,6 +2131,7 @@
 91.194.149.245 xmlrpc;
 91.195.204.103 xmlrpc;
 91.195.204.118 xmlrpc;
+91.195.204.125 xmlrpc;
 91.195.204.99 xmlrpc;
 91.197.64.56 xmlrpc;
 91.201.236.117 xmlrpc;
