Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1057,6 +1057,7 @@
 193.106.111.40 xmlrpc;
 193.106.151.161 xmlrpc;
 193.106.151.170 xmlrpc;
+193.107.148.154 xmlrpc;
 193.112.79.79 xmlrpc;
 193.143.1.7 xmlrpc;
 193.151.222.216 xmlrpc;
@@ -2384,6 +2385,7 @@
 95.68.174.190 xmlrpc;
 95.71.88.36 xmlrpc;
 95.73.236.13 xmlrpc;
+95.79.83.142 xmlrpc;
 95.81.216.126 xmlrpc;
 95.83.135.146 xmlrpc;
 95.83.35.97 xmlrpc;
