--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -134,6 +134,7 @@
 109.75.207.161 xmlrpc;
 109.94.11.4 xmlrpc;
 109.95.101.24 xmlrpc;
+109.95.103.189 xmlrpc;
 109.95.103.80 xmlrpc;
 109.95.72.166 xmlrpc;
 110.40.135.44 xmlrpc;
@@ -2248,6 +2249,7 @@
 94.102.127.136 xmlrpc;
 94.103.231.191 xmlrpc;
 94.137.79.149 xmlrpc;
+94.140.233.208 xmlrpc;
 94.140.244.164 xmlrpc;
 94.140.244.4 xmlrpc;
 94.140.246.55 xmlrpc;
