--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -465,6 +465,7 @@
 146.158.124.54 xmlrpc;
 146.158.124.68 xmlrpc;
 146.158.125.107 xmlrpc;
+146.185.200.217 xmlrpc;
 146.19.59.2 xmlrpc;
 146.19.59.44 xmlrpc;
 146.190.103.193 xmlrpc;
