--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -115,6 +115,7 @@
 109.229.78.194 xmlrpc;
 109.233.201.137 xmlrpc;
 109.248.12.243 xmlrpc;
+109.248.14.111 xmlrpc;
 109.248.142.72 xmlrpc;
 109.248.15.13 xmlrpc;
 109.248.15.152 xmlrpc;
@@ -662,6 +663,7 @@
 176.195.56.242 xmlrpc;
 176.196.75.72 xmlrpc;
 176.208.15.69 xmlrpc;
+176.212.190.17 xmlrpc;
 176.212.197.130 xmlrpc;
 176.212.68.192 xmlrpc;
 176.212.68.196 xmlrpc;
@@ -1094,6 +1096,7 @@
 194.233.66.60 xmlrpc;
 194.233.81.116 xmlrpc;
 194.233.95.162 xmlrpc;
+194.32.229.140 xmlrpc;
 194.33.38.212 xmlrpc;
 194.33.49.158 xmlrpc;
 194.34.98.131 xmlrpc;
@@ -1691,6 +1694,7 @@
 46.8.22.153 xmlrpc;
 46.8.22.184 xmlrpc;
 46.8.222.131 xmlrpc;
+46.8.223.80 xmlrpc;
 46.8.23.137 xmlrpc;
 46.8.23.244 xmlrpc;
 46.8.38.24 xmlrpc;
@@ -1933,6 +1937,7 @@
 79.139.246.86 xmlrpc;
 79.141.208.34 xmlrpc;
 79.142.83.6 xmlrpc;
+79.142.88.98 xmlrpc;
 79.172.69.129 xmlrpc;
 79.172.70.109 xmlrpc;
 79.173.87.105 xmlrpc;
@@ -1984,6 +1989,7 @@
 80.64.26.125 xmlrpc;
 80.70.109.152 xmlrpc;
 80.72.30.54 xmlrpc;
+80.76.106.111 xmlrpc;
 80.83.250.250 xmlrpc;
 80.87.195.44 xmlrpc;
 80.95.45.113 xmlrpc;
@@ -2185,6 +2191,7 @@
 92.119.178.3 xmlrpc;
 92.119.42.101 xmlrpc;
 92.119.42.102 xmlrpc;
+92.124.163.195 xmlrpc;
 92.124.206.119 xmlrpc;
 92.126.119.31 xmlrpc;
 92.223.85.212 xmlrpc;
@@ -2326,6 +2333,7 @@
 95.221.225.151 xmlrpc;
 95.24.108.39 xmlrpc;
 95.24.116.194 xmlrpc;
+95.24.119.216 xmlrpc;
 95.24.14.88 xmlrpc;
 95.24.146.230 xmlrpc;
 95.24.150.103 xmlrpc;
@@ -2337,6 +2345,7 @@
 95.24.21.47 xmlrpc;
 95.24.230.81 xmlrpc;
 95.24.233.234 xmlrpc;
+95.24.46.89 xmlrpc;
 95.24.50.172 xmlrpc;
 95.24.57.95 xmlrpc;
 95.24.69.152 xmlrpc;
