Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1974,6 +1974,7 @@
 8.219.64.236 xmlrpc;
 80.234.3.53 xmlrpc;
 80.234.77.205 xmlrpc;
+80.234.78.97 xmlrpc;
 80.237.123.63 xmlrpc;
 80.244.42.72 xmlrpc;
 80.244.44.132 xmlrpc;
