--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2331,6 +2331,7 @@
 95.179.120.131 xmlrpc;
 95.179.121.215 xmlrpc;
 95.179.123.90 xmlrpc;
+95.179.125.212 xmlrpc;
 95.179.94.122 xmlrpc;
 95.181.137.42 xmlrpc;
 95.182.126.116 xmlrpc;
