--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -886,6 +886,7 @@
 185.15.38.175 xmlrpc;
 185.15.38.31 xmlrpc;
 185.152.95.108 xmlrpc;
+185.16.106.75 xmlrpc;
 185.16.138.138 xmlrpc;
 185.16.138.156 xmlrpc;
 185.165.163.127 xmlrpc;
@@ -1188,6 +1189,7 @@
 202.57.209.242 xmlrpc;
 202.57.209.253 xmlrpc;
 202.57.209.26 xmlrpc;
+202.57.209.37 xmlrpc;
 202.57.209.4 xmlrpc;
 202.57.209.44 xmlrpc;
 202.57.209.48 xmlrpc;
