--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -913,6 +913,7 @@
 185.23.66.89 xmlrpc;
 185.234.230.85 xmlrpc;
 185.236.157.117 xmlrpc;
+185.244.20.97 xmlrpc;
 185.244.22.22 xmlrpc;
 185.244.22.94 xmlrpc;
 185.244.23.40 xmlrpc;
