Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1679,6 +1679,7 @@
 46.242.9.108 xmlrpc;
 46.242.9.199 xmlrpc;
 46.243.232.93 xmlrpc;
+46.252.127.167 xmlrpc;
 46.29.208.18 xmlrpc;
 46.31.24.80 xmlrpc;
 46.31.27.182 xmlrpc;
@@ -2230,6 +2231,7 @@
 92.255.211.127 xmlrpc;
 92.37.157.121 xmlrpc;
 92.42.43.178 xmlrpc;
+92.42.9.24 xmlrpc;
 92.43.185.55 xmlrpc;
 92.53.123.166 xmlrpc;
 92.53.96.103 xmlrpc;
