Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1446,6 +1446,7 @@
 31.41.62.75 xmlrpc;
 31.42.46.4 xmlrpc;
 31.43.223.161 xmlrpc;
+34.126.127.235 xmlrpc;
 34.142.151.15 xmlrpc;
 34.142.214.245 xmlrpc;
 34.92.81.103 xmlrpc;
