--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -205,6 +205,7 @@
 115.63.101.11 xmlrpc;
 115.63.101.157 xmlrpc;
 115.63.101.250 xmlrpc;
+115.63.101.67 xmlrpc;
 116.12.48.101 xmlrpc;
 116.14.136.60 xmlrpc;
 116.48.20.221 xmlrpc;
