--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -304,6 +304,7 @@
 123.13.58.206 xmlrpc;
 123.13.58.236 xmlrpc;
 123.13.58.93 xmlrpc;
+123.13.59.172 xmlrpc;
 123.13.59.96 xmlrpc;
 123.13.60.151 xmlrpc;
 123.13.60.173 xmlrpc;
