--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1563,6 +1563,7 @@
 43.136.69.130 xmlrpc;
 43.136.84.130 xmlrpc;
 43.136.90.71 xmlrpc;
+43.136.97.195 xmlrpc;
 43.137.5.134 xmlrpc;
 43.137.50.186 xmlrpc;
 43.138.113.119 xmlrpc;
